[package]
name = "wymrs"
version = "0.1.0"
authors = ["Jordan Danford <jordandanford@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
num = "0.4"
once_cell = "1.18"
rand = "0.8"
rand_distr = "0.4"

[dependencies.palette]
version = "0.7"
default-features = false
features = ["std"]

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["unsafe_textures"]
